--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^8.0.2",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^8.0.2",
     "@capacitor/core": "^8.0.2",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
