--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+   
 }
 
 apply from: 'capacitor.build.gradle'
@@ -75,4 +76,6 @@ try {
     }
 } catch(Exception e) {
     logger.info("google-services.json not found, google-services plugin not applied. Push Notifications won't work")
+
 }
+apply plugin: 'com.google.gms.google-services'
